# flowrs-package

./: Cargo.toml  README.md
src/: flow_package.rs  lib.rs
src/flow_package/: package.rs  package_manager.rs
src/flow_package/package/: argument.rs  argument_construction.rs  argument_passing.rs  constructor.rs  input.rs  modifier.rs  module.rs  namespace.rs  object_description.rs  output.rs  package.rs  package_crate.rs  package_type.rs  type_description.rs  type_parameter.rs
