[package]
name = "flowrs-package"
version = "0.1.0"
edition = "2021"
authors = ["contact@moritzphilippmaier.de"]
description = "Flow-Package handling for the Flowrs-library"
repository = "https://github.com/flow-rs/flowrs-package.git"
lience-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-package"
keywords = ["flow", "fbp", "wasm"]
categories = ["data-structures", "wasm"]

[lib]
create-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.83"
#flowrs = {git = "https://github.com/flow-rs/flowrs", branch = "mtMophima-exec"}
handlebars = "5.1.2"
serde = {version = "1.0.201",features = ["derive"]}
serde_json = "1.0.117"
